vlib/v/checker/tests/type_cast_optional_err.vv
fn main() {
    println(int('hi'.last_index('i')))
}
